--- a/qualitas-engines-api-configuration/pom.xml
+++ b/qualitas-engines-api-configuration/pom.xml
@@ -3,18 +3,17 @@
 	<parent>
 		<artifactId>qualitas-parent</artifactId>
 		<groupId>com.google.code.qualitas</groupId>
-		<version>${qualitas.version}</version>
+		<version>0.0.3-SNAPSHOT</version>
 		<relativePath>../qualitas-parent</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.google.code.qualitas.engines.api</groupId>
 	<artifactId>qualitas-engines-api-configuration</artifactId>
-	<version>${qualitas.version}</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>qualitas-engines-api-configuration</name>
-	<url>http://maven.apache.org</url>
 
 	<build>
 		<resources>
@@ -43,7 +42,6 @@
 		<dependency>
 			<groupId>com.sun.xml.bind</groupId>
 			<artifactId>jaxb-impl</artifactId>
-			<version>${jaxb.version}</version>
 		</dependency>
 	</dependencies>
 
