--- a/qualitas-engines-api-validation/pom.xml
+++ b/qualitas-engines-api-validation/pom.xml
@@ -1,33 +1,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>qualitas-parent</artifactId>
 		<groupId>com.google.code.qualitas</groupId>
-		<version>${qualitas.version}</version>
+		<version>0.0.3-SNAPSHOT</version>
 		<relativePath>../qualitas-parent</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.google.code.qualitas.engines.api</groupId>
-  <artifactId>qualitas-engines-api-validation</artifactId>
-  <version>${qualitas.version}</version>
-  <packaging>jar</packaging>
+	<groupId>com.google.code.qualitas.engines.api</groupId>
+	<artifactId>qualitas-engines-api-validation</artifactId>
+	<version>0.0.3-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <name>qualitas-engines-api-validation</name>
+	<name>qualitas-engines-api-validation</name>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>com.google.code.qualitas.engines.api</groupId>
-    	<artifactId>qualitas-engines-api-core</artifactId>
-    	<version>${qualitas.version}</version>
-    	<type>jar</type>
-    	<scope>compile</scope>
-    </dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.qualitas.engines.api</groupId>
+			<artifactId>qualitas-engines-api-core</artifactId>
+		</dependency>
+	</dependencies>
 </project>
