--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -3,14 +3,14 @@
 	<parent>
 		<artifactId>qualitas</artifactId>
 		<groupId>com.google.code.qualitas</groupId>
-		<version>${qualitas.version}</version>
+		<version>0.0.3-SNAPSHOT</version>
 		<relativePath>../qualitas</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.google.code.qualitas</groupId>
 	<artifactId>qualitas-parent</artifactId>
-	<version>${qualitas.version}</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>qualitas-parent</name>
@@ -20,140 +20,377 @@
 			<dependency>
 				<groupId>com.google.code.qualitas.engines.api</groupId>
 				<artifactId>qualitas-engines-api-core</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.qualitas.engines.api</groupId>
 				<artifactId>qualitas-engines-api-deployment</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.qualitas.engines.api</groupId>
 				<artifactId>qualitas-engines-api-factory</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.qualitas.engines.api</groupId>
 				<artifactId>qualitas-engines-api-instrumentation</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.qualitas.engines.api</groupId>
 				<artifactId>qualitas-engines-api-invocation</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.qualitas.engines.api</groupId>
 				<artifactId>qualitas-engines-api-validation</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.qualitas.engines.ode</groupId>
 				<artifactId>qualitas-engines-ode-core</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.qualitas.engines.ode</groupId>
 				<artifactId>qualitas-engines-ode-deployment</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.qualitas.engines.ode</groupId>
 				<artifactId>qualitas-engines-ode-factory</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.qualitas.engines.ode</groupId>
 				<artifactId>qualitas-engines-ode-instrumentation</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.qualitas.engines.ode</groupId>
 				<artifactId>qualitas-engines-ode-invocation</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.qualitas.engines.ode</groupId>
 				<artifactId>qualitas-engines-ode-validation</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.qualitas.engines.ode</groupId>
 				<artifactId>qualitas-engines-ode-spring</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.qualitas.integration.api</groupId>
 				<artifactId>qualitas-integration-api</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.qualitas.integration.amqp</groupId>
 				<artifactId>qualitas-integration-amqp</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.qualitas.services.security</groupId>
 				<artifactId>qualitas-services-security-spring</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.qualitas.internal.installation</groupId>
 				<artifactId>qualitas-internal-installation</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.google.code.qualitas.webapp</groupId>
 				<artifactId>qualitas-webapp</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.qualitas.utils</groupId>
+				<groupId>com.google.code.qualitas.utils</groupId>
 				<artifactId>qualitas-utils-zip</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.qualitas.utils</groupId>
+				<groupId>com.google.code.qualitas.utils</groupId>
 				<artifactId>qualitas-utils-xslt</artifactId>
-				<version>${qualitas.version}</version>
+				<version>${project.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${junit.version}</version>
+				<type>jar</type>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.sun.xml.bind</groupId>
+				<artifactId>jaxb-impl</artifactId>
+				<version>${jaxb.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.ws.commons.axiom</groupId>
+				<artifactId>axiom-api</artifactId>
+				<version>${axiom.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.ws.commons.axiom</groupId>
+				<artifactId>axiom-impl</artifactId>
+				<version>${axiom.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.axis2</groupId>
+				<artifactId>axis2</artifactId>
+				<version>${axis2.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>commons-logging</groupId>
+				<artifactId>commons-logging</artifactId>
+				<version>${commons-logging.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>${commons-io.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.ode</groupId>
+				<artifactId>ode-axis2</artifactId>
+				<version>${ode-axis2.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+				<exclusions>
+					<exclusion>
+						<artifactId>jencks</artifactId>
+						<groupId>org.jencks</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>saxon-dom</artifactId>
+						<groupId>net.sf.saxon</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>saxon-xpath</artifactId>
+						<groupId>net.sf.saxon</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>saxon-xqj</artifactId>
+						<groupId>net.sf.saxon</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>saxon</artifactId>
+						<groupId>net.sf.saxon</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>ode-bpel-store</artifactId>
+						<groupId>org.apache.ode</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>spring</artifactId>
+						<groupId>org.springframework</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>woden</artifactId>
+						<groupId>org.apache.woden</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>jibx-bind</artifactId>
+						<groupId>jibx</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>jibx-run</artifactId>
+						<groupId>jibx</groupId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>xalan</groupId>
+				<artifactId>xalan</artifactId>
+				<version>${xalan.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-exec</artifactId>
+				<version>${commons-exec.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.amqp</groupId>
+				<artifactId>spring-rabbit</artifactId>
+				<version>${spring-rabbit.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.camel</groupId>
+				<artifactId>camel-core</artifactId>
+				<version>${camel.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.camel</groupId>
+				<artifactId>camel-spring</artifactId>
+				<version>${camel.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.camel</groupId>
+				<artifactId>camel-amqp</artifactId>
+				<version>${camel.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4j.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-log4j12</artifactId>
+				<version>${slf4j.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+				<version>${log4j.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context</artifactId>
+				<version>${spring.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-test</artifactId>
+				<version>${spring.version}</version>
+				<type>jar</type>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-web</artifactId>
+				<version>${spring.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-webmvc</artifactId>
+				<version>${spring.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-core</artifactId>
+				<version>${spring.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>${spring.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>${spring.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-openid</artifactId>
+				<version>${spring.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>commons-fileupload</groupId>
+				<artifactId>commons-fileupload</artifactId>
+				<version>${commons-fileupload.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>cglib</groupId>
+				<artifactId>cglib</artifactId>
+				<version>${cglib.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>servlet-api</artifactId>
+				<version>${servlet-api.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
@@ -162,6 +399,7 @@
 	<properties>
 		<project.build.sourceVersion>1.6</project.build.sourceVersion>
 		<project.build.targetVersion>1.6</project.build.targetVersion>
+		<maven-compiler-plugin.version>2.0.2</maven-compiler-plugin.version>
 		<jaxb.version>2.1.13</jaxb.version>
 		<jaxb2-maven-plugin.version>1.3</jaxb2-maven-plugin.version>
 		<junit.version>4.8.2</junit.version>
@@ -169,19 +407,20 @@
 		<commons-io.version>1.4</commons-io.version>
 		<ode-axis2.version>1.3.5</ode-axis2.version>
 		<failsafe-maven-plugin.version>2.4.3-alpha-1</failsafe-maven-plugin.version>
-		<maven-jetty-plugin.version>6.1.25</maven-jetty-plugin.version>
 		<commons-exec.version>1.0.1</commons-exec.version>
 		<maven-checkstyle-plugin.version>2.8</maven-checkstyle-plugin.version>
 		<xalan.version>2.7.1</xalan.version>
 		<slf4j.version>1.6.1</slf4j.version>
 		<log4j.version>1.2.16</log4j.version>
 		<commons-fileupload.version>1.2.2</commons-fileupload.version>
-		<jetty-maven-plugin.version>7.5.3.v20111011</jetty-maven-plugin.version>
+		<jetty-maven-plugin.version>7.6.0.v20120127</jetty-maven-plugin.version>
 		<spring.version>3.0.6.RELEASE</spring.version>
 		<camel.version>2.9.0</camel.version>
 		<spring-rabbit.version>1.0.0.RELEASE</spring-rabbit.version>
 		<cglib.version>2.2.2</cglib.version>
 		<servlet-api.version>2.5</servlet-api.version>
+		<axiom.version>1.2.12</axiom.version>
+		<axis2.version>1.6.1</axis2.version>
 	</properties>
 
 	<build>
@@ -189,6 +428,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin.version}</version>
 				<configuration>
 					<source>${project.build.sourceVersion}</source>
 					<target>${project.build.targetVersion}</target>
@@ -203,7 +443,7 @@
 					<dependency>
 						<groupId>com.google.code.qualitas</groupId>
 						<artifactId>qualitas-buildtools</artifactId>
-						<version>${qualitas.version}</version>
+						<version>${project.version}</version>
 					</dependency>
 				</dependencies>
 			</plugin>
@@ -230,6 +470,26 @@
 							</goals>
 						</execution>
 					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.camel</groupId>
+					<artifactId>camel-maven-plugin</artifactId>
+					<version>${camel.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.mortbay.jetty</groupId>
+					<artifactId>jetty-maven-plugin</artifactId>
+					<version>${jetty-maven-plugin.version}</version>
+					<configuration>
+						<systemProperties>
+							<!-- enable easy JMX connection to JConsole -->
+							<systemProperty>
+								<name>com.sun.management.jmxremote</name>
+								<value />
+							</systemProperty>
+						</systemProperties>
+						<scanIntervalSeconds>10</scanIntervalSeconds>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
