--- a/qualitas/pom.xml
+++ b/qualitas/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.google.code.qualitas</groupId>
 	<artifactId>qualitas</artifactId>
-	<version>${qualitas.version}</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>qualitas</name>
@@ -12,7 +12,6 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<qualitas.version>0.0.2-SNAPSHOT</qualitas.version>
 	</properties>
 
 </project>
