fixed one more checkstyle error (no new line) updated .hgignore, added x rights to install_and_validate_all_projects.sh script

--- a/.hgignore
+++ b/.hgignore
@@ -2,9 +2,9 @@ syntax: glob
 .classpath
 .checkstyle
 .project
-.settings
-.hgignore
 .metadata
 derby.log
 syntax: regexp
+.settings/*
 target/*
+Servers/*
