pom refactorings (reduced number of dependencies)

--- a/qualitas-engines-api-configuration/pom.xml
+++ b/qualitas-engines-api-configuration/pom.xml
@@ -40,8 +40,8 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.sun.xml.bind</groupId>
-			<artifactId>jaxb-impl</artifactId>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
 		</dependency>
 	</dependencies>
 
