--- a/qualitas-engines-api-core/pom.xml
+++ b/qualitas-engines-api-core/pom.xml
@@ -14,4 +14,24 @@
 	<packaging>jar</packaging>
 
 	<name>qualitas-engines-api-core</name>
+	<dependencies>
+		<dependency>
+			<groupId>com.google.code.qualitas.engines.api</groupId>
+			<artifactId>qualitas-engines-api-configuration</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+
 </project>
