--- a/qualitas-engines-ode-deployment/pom.xml
+++ b/qualitas-engines-ode-deployment/pom.xml
@@ -30,6 +30,80 @@
 		<dependency>
 			<groupId>org.apache.ode</groupId>
 			<artifactId>ode-axis2</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.ode</groupId>
+					<artifactId>ode-bpel-api</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.ode</groupId>
+					<artifactId>ode-bpel-connector</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.ode</groupId>
+					<artifactId>ode-bpel-dao</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.ode</groupId>
+					<artifactId>ode-bpel-epr</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.ode</groupId>
+					<artifactId>ode-bpel-runtime</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.ode</groupId>
+					<artifactId>ode-scheduler-simple</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.ode</groupId>
+					<artifactId>ode-bpel-schemas</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.axis2</groupId>
+					<artifactId>axis2-adb</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.axis2</groupId>
+					<artifactId>axis2-java2wsdl</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.axis2</groupId>
+					<artifactId>axis2-jibx</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.axis2</groupId>
+					<artifactId>axis2-codegen</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.rampart</groupId>
+					<artifactId>rampart-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.rampart</groupId>
+					<artifactId>rampart-policy</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.rampart</groupId>
+					<artifactId>rampart-trust</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.ws.security</groupId>
+					<artifactId>wss4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.santuario</groupId>
+					<artifactId>xmlsec</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.opensaml</groupId>
+					<artifactId>opensaml</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>bouncycastle</groupId>
+					<artifactId>bcprov-jdk15</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.qualitas.engines.ode</groupId>
