--- a/qualitas/pom.xml
+++ b/qualitas/pom.xml
@@ -10,6 +10,14 @@
 	<name>qualitas</name>
 	<url>http://code.google.com/p/qualitas/</url>
 
+	<scm>
+		<url>https://code.google.com/p/qualitas/</url>
+	</scm>
+
+	<organization>
+		<name>Łukasz Budnik</name>
+	</organization>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
