added resoluton api and ODE implementation (includes parent pom.xml refactoring, i.e. reduced number of dependencies)

--- a/qualitas-engines-ode-spring/pom.xml
+++ b/qualitas-engines-ode-spring/pom.xml
@@ -52,5 +52,9 @@
 			<groupId>com.google.code.qualitas.engines.ode</groupId>
 			<artifactId>qualitas-engines-ode-validation</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.qualitas.engines.ode</groupId>
+			<artifactId>qualitas-engines-ode-resolver</artifactId>
+		</dependency>
 	</dependencies>
 </project>
