--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -19,6 +19,13 @@
 		<dependencies>
 			<dependency>
 				<groupId>com.google.code.qualitas.engines.api</groupId>
+				<artifactId>qualitas-engines-api-configuration</artifactId>
+				<version>${project.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.google.code.qualitas.engines.api</groupId>
 				<artifactId>qualitas-engines-api-core</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
@@ -55,6 +62,13 @@
 			<dependency>
 				<groupId>com.google.code.qualitas.engines.api</groupId>
 				<artifactId>qualitas-engines-api-validation</artifactId>
+				<version>${project.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.google.code.qualitas.engines.api</groupId>
+				<artifactId>qualitas-engines-api-resolver</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
@@ -97,6 +111,13 @@
 			<dependency>
 				<groupId>com.google.code.qualitas.engines.ode</groupId>
 				<artifactId>qualitas-engines-ode-validation</artifactId>
+				<version>${project.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.google.code.qualitas.engines.ode</groupId>
+				<artifactId>qualitas-engines-ode-resolver</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
@@ -165,11 +186,27 @@
 				<scope>test</scope>
 			</dependency>
 			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-all</artifactId>
+				<version>${mockito.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
 				<groupId>com.sun.xml.bind</groupId>
 				<artifactId>jaxb-impl</artifactId>
 				<version>${jaxb.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
+				<exclusions>
+					<exclusion>
+						<groupId>javax.activation</groupId>
+						<artifactId>activation</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>javax.xml.stream</groupId>
+						<artifactId>stax-api</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.ws.commons.axiom</groupId>
@@ -177,6 +214,32 @@
 				<version>${axiom.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
+				<exclusions>
+					<exclusion>
+						<artifactId>servlet-api</artifactId>
+						<groupId>javax.servlet</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>geronimo-javamail_1.4_spec</artifactId>
+						<groupId>org.apache.geronimo.specs</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>geronimo-activation_1.1_spec</artifactId>
+						<groupId>org.apache.geronimo.specs</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>jaxen</artifactId>
+						<groupId>jaxen</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>geronimo-stax-api_1.0_spec</artifactId>
+						<groupId>org.apache.geronimo.specs</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>commons-logging</artifactId>
+						<groupId>commons-logging</groupId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.ws.commons.axiom</groupId>
@@ -198,6 +261,24 @@
 				<version>${commons-logging.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
+				<exclusions>
+					<exclusion>
+						<artifactId>log4j</artifactId>
+						<groupId>log4j</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>logkit</artifactId>
+						<groupId>logkit</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>avalon-framework</artifactId>
+						<groupId>avalon-framework</groupId>
+					</exclusion>
+					<exclusion>
+						<artifactId>servlet-api</artifactId>
+						<groupId>javax.servlet</groupId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>commons-io</groupId>
@@ -410,6 +491,7 @@
 		<jaxb.version>2.1.13</jaxb.version>
 		<jaxb2-maven-plugin.version>1.3</jaxb2-maven-plugin.version>
 		<junit.version>4.8.2</junit.version>
+		<mockito.version>1.8.5</mockito.version>
 		<commons-logging.version>1.1</commons-logging.version>
 		<commons-io.version>1.4</commons-io.version>
 		<ode-axis2.version>1.3.5</ode-axis2.version>
