changes in poms so that maven executes faster (i.e., skipping tests in api projects)

--- a/qualitas-buildtools/pom.xml
+++ b/qualitas-buildtools/pom.xml
@@ -14,5 +14,9 @@
 	<packaging>jar</packaging>
 
 	<name>qualitas-buildtools</name>
+	
+	<properties>
+		<maven.test.skip>true</maven.test.skip>
+	</properties>
 
 </project>
