--- a/qualitas-engines-api-factory/pom.xml
+++ b/qualitas-engines-api-factory/pom.xml
@@ -14,6 +14,10 @@
 	<packaging>jar</packaging>
 
 	<name>qualitas-engines-api-factory</name>
+	
+	<properties>
+		<maven.test.skip>true</maven.test.skip>
+	</properties>
 
 	<dependencies>
 		<dependency>
