--- a/qualitas-engines-api-instrumentation/pom.xml
+++ b/qualitas-engines-api-instrumentation/pom.xml
@@ -15,6 +15,10 @@
 
 	<name>qualitas-engines-api-instrumentation</name>
 
+	<properties>
+		<maven.test.skip>true</maven.test.skip>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.google.code.qualitas.engines.api</groupId>
