--- a/qualitas-engines-api-resolution/pom.xml
+++ b/qualitas-engines-api-resolution/pom.xml
@@ -14,6 +14,10 @@
 
 	<name>qualitas-engines-api-resolution</name>
 
+	<properties>
+		<maven.test.skip>true</maven.test.skip>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<artifactId>qualitas-engines-api-core</artifactId>
