--- a/qualitas-engines-ode-deployment/src/main/resources/qualitas-engines-ode-deployment.properties
+++ b/qualitas-engines-ode-deployment/src/main/resources/qualitas-engines-ode-deployment.properties
@@ -1,1 +1,1 @@
-ode.defaultDeploymentServiceEndpoint = http://localhost:9191/ode/processes/DeploymentService
+ode.defaultDeploymentServiceEndpoint = ${qualitas.engines.ode.defaultDeploymentServiceEndpoint}
