fixed test errors, removed hardcoded properties, maven filtering is now used

--- a/qualitas-engines-ode-validation/src/main/resources/qualitas-engines-ode-validation.properties
+++ b/qualitas-engines-ode-validation/src/main/resources/qualitas-engines-ode-validation.properties
@@ -1,4 +1,2 @@
-#ode.home = /work/qualitas/programs/apache-ode-war-1.3.4
-#ode.platform = linux
-ode.home = C:\\hobby\\programs\\apache-ode-war-1.3.4
-ode.platform = win
+ode.home = ${qualitas.engines.ode.home}
+ode.platform = ${qualitas.engines.ode.platform}
