added qualitas configuration helper and its test to help retrieving parameters from qualitas configuration object

--- a/qualitas-engines-api-configuration/pom.xml
+++ b/qualitas-engines-api-configuration/pom.xml
@@ -43,6 +43,14 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.lambdaj</groupId>
+			<artifactId>lambdaj</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
