changed group id from com.google.code to com.googlecode plus changed version to 0.0.5-SNAPSHOT

--- a/qualitas-buildtools/pom.xml
+++ b/qualitas-buildtools/pom.xml
@@ -1,16 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<artifactId>qualitas</artifactId>
-		<groupId>com.google.code.qualitas</groupId>
-		<version>0.0.4-SNAPSHOT</version>
-		<relativePath>../qualitas</relativePath>
-	</parent>
+        <artifactId>qualitas</artifactId>
+        <groupId>com.googlecode.qualitas</groupId>
+        <version>0.0.5-SNAPSHOT</version>
+        <relativePath>../qualitas</relativePath>
+    </parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.google.code.qualitas</groupId>
+	<groupId>com.googlecode.qualitas</groupId>
 	<artifactId>qualitas-buildtools</artifactId>
-	<version>0.0.4-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>qualitas-buildtools</name>
