--- a/qualitas-engines-ode-core/pom.xml
+++ b/qualitas-engines-ode-core/pom.xml
@@ -2,21 +2,20 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>qualitas-parent</artifactId>
-		<groupId>com.google.code.qualitas</groupId>
-		<version>0.0.4-SNAPSHOT</version>
+		<groupId>com.googlecode.qualitas</groupId>
+		<version>0.0.5-SNAPSHOT</version>
 		<relativePath>../qualitas-parent</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.google.code.qualitas.engines.ode</groupId>
+	<groupId>com.googlecode.qualitas.engines.ode</groupId>
 	<artifactId>qualitas-engines-ode-core</artifactId>
-	<version>0.0.4-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>qualitas-engines-ode-core</name>
 	<dependencies>
 		<dependency>
-			<groupId>com.google.code.qualitas.engines.api</groupId>
+			<groupId>com.googlecode.qualitas.engines.api</groupId>
 			<artifactId>qualitas-engines-api-core</artifactId>
 		</dependency>
 		<dependency>
@@ -28,11 +27,11 @@
 			<artifactId>commons-io</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.qualitas.utils</groupId>
+			<groupId>com.googlecode.qualitas.utils</groupId>
 			<artifactId>qualitas-utils-zip</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.qualitas.utils</groupId>
+			<groupId>com.googlecode.qualitas.utils</groupId>
 			<artifactId>qualitas-utils-xslt</artifactId>
 		</dependency>
 		<dependency>
