--- a/qualitas-engines-ode-deployment/pom.xml
+++ b/qualitas-engines-ode-deployment/pom.xml
@@ -2,15 +2,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>qualitas-parent</artifactId>
-		<groupId>com.google.code.qualitas</groupId>
-		<version>0.0.4-SNAPSHOT</version>
+		<groupId>com.googlecode.qualitas</groupId>
+		<version>0.0.5-SNAPSHOT</version>
 		<relativePath>../qualitas-parent</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.google.code.qualitas.engines.ode</groupId>
+	<groupId>com.googlecode.qualitas.engines.ode</groupId>
 	<artifactId>qualitas-engines-ode-deployment</artifactId>
-	<version>0.0.4-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<profiles>
@@ -33,11 +32,11 @@
 	<name>qualitas-engines-ode-deployment</name>
 	<dependencies>
 		<dependency>
-			<groupId>com.google.code.qualitas.engines.api</groupId>
+			<groupId>com.googlecode.qualitas.engines.api</groupId>
 			<artifactId>qualitas-engines-api-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.qualitas.engines.api</groupId>
+			<groupId>com.googlecode.qualitas.engines.api</groupId>
 			<artifactId>qualitas-engines-api-deployment</artifactId>
 		</dependency>
 		<dependency>
@@ -123,7 +122,7 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.qualitas.engines.ode</groupId>
+			<groupId>com.googlecode.qualitas.engines.ode</groupId>
 			<artifactId>qualitas-engines-ode-core</artifactId>
 		</dependency>
 		<dependency>
