--- a/qualitas-engines-ode-spring/pom.xml
+++ b/qualitas-engines-ode-spring/pom.xml
@@ -2,15 +2,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>qualitas-parent</artifactId>
-		<groupId>com.google.code.qualitas</groupId>
-		<version>0.0.4-SNAPSHOT</version>
+		<groupId>com.googlecode.qualitas</groupId>
+		<version>0.0.5-SNAPSHOT</version>
 		<relativePath>../qualitas-parent</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.google.code.qualitas.engines.ode</groupId>
+	<groupId>com.googlecode.qualitas.engines.ode</groupId>
 	<artifactId>qualitas-engines-ode-spring</artifactId>
-	<version>0.0.4-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>qualitas-engines-ode-spring</name>
@@ -29,31 +28,31 @@
 			<artifactId>spring-test</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.qualitas.engines.ode</groupId>
+			<groupId>com.googlecode.qualitas.engines.ode</groupId>
 			<artifactId>qualitas-engines-ode-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.qualitas.engines.ode</groupId>
+			<groupId>com.googlecode.qualitas.engines.ode</groupId>
 			<artifactId>qualitas-engines-ode-factory</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.qualitas.engines.ode</groupId>
+			<groupId>com.googlecode.qualitas.engines.ode</groupId>
 			<artifactId>qualitas-engines-ode-deployment</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.qualitas.engines.ode</groupId>
+			<groupId>com.googlecode.qualitas.engines.ode</groupId>
 			<artifactId>qualitas-engines-ode-instrumentation</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.qualitas.engines.ode</groupId>
+			<groupId>com.googlecode.qualitas.engines.ode</groupId>
 			<artifactId>qualitas-engines-ode-invocation</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.qualitas.engines.ode</groupId>
+			<groupId>com.googlecode.qualitas.engines.ode</groupId>
 			<artifactId>qualitas-engines-ode-validation</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.qualitas.engines.ode</groupId>
+			<groupId>com.googlecode.qualitas.engines.ode</groupId>
 			<artifactId>qualitas-engines-ode-resolution</artifactId>
 		</dependency>
 	</dependencies>
