--- a/qualitas-internal-bpel-spring/pom.xml
+++ b/qualitas-internal-bpel-spring/pom.xml
@@ -2,22 +2,21 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>qualitas-parent</artifactId>
-		<groupId>com.google.code.qualitas</groupId>
-		<version>0.0.4-SNAPSHOT</version>
+		<groupId>com.googlecode.qualitas</groupId>
+		<version>0.0.5-SNAPSHOT</version>
 		<relativePath>../qualitas-parent</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.google.code.qualitas.internal.bpel</groupId>
+	<groupId>com.googlecode.qualitas.internal.bpel</groupId>
 	<artifactId>qualitas-internal-bpel-spring</artifactId>
-	<version>0.0.4-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>qualitas-internal-bpel-spring</name>
 
 	<dependencies>
 		<dependency>
-			<groupId>com.google.code.qualitas.internal.bpel</groupId>
+			<groupId>com.googlecode.qualitas.internal.bpel</groupId>
 			<artifactId>qualitas-internal-bpel-instrumentation</artifactId>
 		</dependency>
 	</dependencies>
