--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -2,15 +2,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>qualitas</artifactId>
-		<groupId>com.google.code.qualitas</groupId>
-		<version>0.0.4-SNAPSHOT</version>
+		<groupId>com.googlecode.qualitas</groupId>
+		<version>0.0.5-SNAPSHOT</version>
 		<relativePath>../qualitas</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.google.code.qualitas</groupId>
+	<groupId>com.googlecode.qualitas</groupId>
 	<artifactId>qualitas-parent</artifactId>
-	<version>0.0.4-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>qualitas-parent</name>
@@ -113,182 +112,182 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>com.google.code.qualitas.engines.api</groupId>
+				<groupId>com.googlecode.qualitas.engines.api</groupId>
 				<artifactId>qualitas-engines-api-configuration</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.engines.api</groupId>
+				<groupId>com.googlecode.qualitas.engines.api</groupId>
 				<artifactId>qualitas-engines-api-core</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.engines.api</groupId>
+				<groupId>com.googlecode.qualitas.engines.api</groupId>
 				<artifactId>qualitas-engines-api-deployment</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.engines.api</groupId>
+				<groupId>com.googlecode.qualitas.engines.api</groupId>
 				<artifactId>qualitas-engines-api-factory</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.engines.api</groupId>
+				<groupId>com.googlecode.qualitas.engines.api</groupId>
 				<artifactId>qualitas-engines-api-instrumentation</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.engines.api</groupId>
+				<groupId>com.googlecode.qualitas.engines.api</groupId>
 				<artifactId>qualitas-engines-api-invocation</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.engines.api</groupId>
+				<groupId>com.googlecode.qualitas.engines.api</groupId>
 				<artifactId>qualitas-engines-api-validation</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.engines.api</groupId>
+				<groupId>com.googlecode.qualitas.engines.api</groupId>
 				<artifactId>qualitas-engines-api-resolution</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.engines.ode</groupId>
+				<groupId>com.googlecode.qualitas.engines.ode</groupId>
 				<artifactId>qualitas-engines-ode-core</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.engines.ode</groupId>
+				<groupId>com.googlecode.qualitas.engines.ode</groupId>
 				<artifactId>qualitas-engines-ode-deployment</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.engines.ode</groupId>
+				<groupId>com.googlecode.qualitas.engines.ode</groupId>
 				<artifactId>qualitas-engines-ode-factory</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.engines.ode</groupId>
+				<groupId>com.googlecode.qualitas.engines.ode</groupId>
 				<artifactId>qualitas-engines-ode-instrumentation</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.engines.ode</groupId>
+				<groupId>com.googlecode.qualitas.engines.ode</groupId>
 				<artifactId>qualitas-engines-ode-invocation</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.engines.ode</groupId>
+				<groupId>com.googlecode.qualitas.engines.ode</groupId>
 				<artifactId>qualitas-engines-ode-validation</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.engines.ode</groupId>
+				<groupId>com.googlecode.qualitas.engines.ode</groupId>
 				<artifactId>qualitas-engines-ode-resolution</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.engines.ode</groupId>
+				<groupId>com.googlecode.qualitas.engines.ode</groupId>
 				<artifactId>qualitas-engines-ode-spring</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.integration.api</groupId>
+				<groupId>com.googlecode.qualitas.integration.api</groupId>
 				<artifactId>qualitas-integration-api</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.integration.amqp</groupId>
+				<groupId>com.googlecode.qualitas.integration.amqp</groupId>
 				<artifactId>qualitas-integration-amqp</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.services.security</groupId>
+				<groupId>com.googlecode.qualitas.services.security</groupId>
 				<artifactId>qualitas-services-security-spring</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.internal.installation</groupId>
+				<groupId>com.googlecode.qualitas.internal.installation</groupId>
 				<artifactId>qualitas-internal-installation</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.internal.bpel</groupId>
+				<groupId>com.googlecode.qualitas.internal.bpel</groupId>
 				<artifactId>qualitas-internal-bpel-instrumentation</artifactId>
-				<version>0.0.4-SNAPSHOT</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.internal.bpel</groupId>
+				<groupId>com.googlecode.qualitas.internal.bpel</groupId>
 				<artifactId>qualitas-internal-bpel-spring</artifactId>
-				<version>0.0.4-SNAPSHOT</version>
+				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.webapp</groupId>
+				<groupId>com.googlecode.qualitas.webapp</groupId>
 				<artifactId>qualitas-webapp</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.utils</groupId>
+				<groupId>com.googlecode.qualitas.utils</groupId>
 				<artifactId>qualitas-utils-zip</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.utils</groupId>
+				<groupId>com.googlecode.qualitas.utils</groupId>
 				<artifactId>qualitas-utils-dom</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.google.code.qualitas.utils</groupId>
+				<groupId>com.googlecode.qualitas.utils</groupId>
 				<artifactId>qualitas-utils-xslt</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
@@ -622,6 +621,24 @@
 				<artifactId>commons-beanutils</artifactId>
 				<version>${commons-beanutils.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.eclipse.persistence</groupId>
+				<artifactId>eclipselink</artifactId>
+				<scope>compile</scope>
+				<version>2.3.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.persistence</groupId>
+				<artifactId>javax.persistence</artifactId>
+				<scope>compile</scope>
+				<version>2.0.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hsqldb</groupId>
+				<artifactId>hsqldb</artifactId>
+				<scope>test</scope>
+				<version>2.2.8</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -659,7 +676,7 @@
 					<version>${maven-checkstyle-plugin.version}</version>
 					<dependencies>
 						<dependency>
-							<groupId>com.google.code.qualitas</groupId>
+							<groupId>com.googlecode.qualitas</groupId>
 							<artifactId>qualitas-buildtools</artifactId>
 							<version>${project.version}</version>
 						</dependency>
