--- a/qualitas-utils-dom/pom.xml
+++ b/qualitas-utils-dom/pom.xml
@@ -1,17 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>com.google.code.qualitas.utils</groupId>
+    <parent>
+        <groupId>com.googlecode.qualitas</groupId>
+        <artifactId>qualitas-parent</artifactId>
+        <version>0.0.5-SNAPSHOT</version>
+        <relativePath>../qualitas-parent</relativePath>
+    </parent>
+    
+	<groupId>com.googlecode.qualitas.utils</groupId>
 	<artifactId>qualitas-utils-dom</artifactId>
-	<version>0.0.4-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<parent>
-		<groupId>com.google.code.qualitas</groupId>
-		<artifactId>qualitas-parent</artifactId>
-		<version>0.0.4-SNAPSHOT</version>
-		<relativePath>../qualitas-parent</relativePath>
-	</parent>
+
 
 	<name>qualitas-utils-dom</name>
 
@@ -25,7 +25,7 @@
 			<artifactId>commons-logging</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.qualitas.utils</groupId>
+			<groupId>com.googlecode.qualitas.utils</groupId>
 			<artifactId>qualitas-utils-xslt</artifactId>
 		</dependency>
 	</dependencies>
